camara_ws/log/build_2025-05-08_18-34-46/py_pkg/stderr.log
  File "/home/leyla/Desktop/camara_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/image_sub.py", line 43
    if __name__=='__main__'
                           ^
SyntaxError: expected ':'

